trunk/Archive2/a6/f9b16166dc889a/output
main.cpp: In member function 'bool safe_stack::empty()':
main.cpp:35:21: error: 'ofp' was not declared in this scope
             fprintf(ofp, "Thread number %d: empty()\n",thread_id);
                     ^
main.cpp:35:56: error: 'thread_id' was not declared in this scope
             fprintf(ofp, "Thread number %d: empty()\n",thread_id);
                                                        ^
main.cpp: In member function 'int safe_stack::pop()':
main.cpp:40:21: error: 'ofp' was not declared in this scope
             fprintf(ofp, "Thread number %d: pop() = ",thread_id);
                     ^
main.cpp:40:55: error: 'thread_id' was not declared in this scope
             fprintf(ofp, "Thread number %d: pop() = ",thread_id);
                                                       ^
main.cpp: In member function 'void safe_stack::push(int)':
main.cpp:54:21: error: 'ofp' was not declared in this scope
             fprintf(ofp, "Thread number %d: push()\n",thread_id);
                     ^
main.cpp:54:55: error: 'thread_id' was not declared in this scope
             fprintf(ofp, "Thread number %d: push()\n",thread_id);
                                                       ^
main.cpp: In member function 'int safe_stack::size()':
main.cpp:59:21: error: 'ofp' was not declared in this scope
             fprintf(ofp, "Thread number %d: size()\n",thread_id);
                     ^
main.cpp:59:55: error: 'thread_id' was not declared in this scope
             fprintf(ofp, "Thread number %d: size()\n",thread_id);
                                                       ^
main.cpp: In member function 'int safe_stack::top()':
main.cpp:64:21: error: 'ofp' was not declared in this scope
             fprintf(ofp, "Thread number %d: top()\n",thread_id);
                     ^
main.cpp:64:54: error: 'thread_id' was not declared in this scope
             fprintf(ofp, "Thread number %d: top()\n",thread_id);
                                                      ^
